# nitro_share

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md
cli/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: file_utils.rs  lib.rs  response_type.rs  serde_chrono.rs  visibility.rs
crates/common/src/file_location/: mod.rs
crates/common/src/paste/: file_type.rs
crates/common/src/rules/: mod.rs
crates/common/src/user_types/: mod.rs
crates/entities/: Cargo.toml
crates/entities/src/: lib.rs
crates/entities/src/auth_token/: database_helpers.rs  mod.rs
crates/entities/src/image/: image.rs  mod.rs  post.rs
crates/entities/src/paste/: database_helpers.rs  file.rs  mod.rs  post.rs
crates/entities/src/user/: database_helpers.rs  mod.rs  permissions.rs  user_responses.rs
crates/helper_macros/: Cargo.toml
crates/helper_macros/src/: lib.rs
crates/helper_macros/src/response_type/: attrs.rs  mod.rs
crates/helper_macros/src/rules/: attrs.rs  mod.rs
crates/helper_macros/src/serde_as_rules/: mod.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_users.rs  m20230123_091026_create_auth_tokens.rs  m20230123_113217_create_uploads.rs  m20230822_185310_init.rs  postgres_init.sql  postgres_init_down.sql
frontend/: .env  .eslintrc.js
frontend/src/: LoadedApp.vue
frontend/src/assets/styles/: form.scss
frontend/src/components/: SideNavBar.vue
frontend/src/components/form/text/: SetEmail.vue  TextInput.vue
frontend/src/components/login/: LoginForm.vue
frontend/src/router/: index.ts
frontend/src/stores/: session.ts
frontend/src/styles/: app.scss
frontend/src/utils/: user.ts
frontend/src/views/: Register.vue
nitro-share-frontend/: README.md  package-lock.json  package.json  tsconfig.json
nitro-share-frontend/src/: App.vue  main.ts  types.ts
nitro-share-frontend/src/components/: ExpandableBarItem.vue
nitro-share-frontend/src/components/form/text/: SetUsername.vue
nitro-share-frontend/src/components/login/: LoginResponse.vue
nitro-share-frontend/src/stores/: system.ts
nitro-share-frontend/src/views/: Index.vue  Login.vue
server/: Cargo.toml
server/src/: error.rs  lib.rs  open_api.rs  responses.rs  state.rs  tracing_setup.rs  utils.rs
server/src/admin/: mod.rs  user.rs
server/src/config/: mod.rs  tracing.rs
server/src/images/: mod.rs
server/src/paste/: create_routes.rs  delete_routes.rs  get_routes.rs  mod.rs  raw.rs
server/src/user/: me.rs  middleware.rs  mod.rs  public.rs
server/src/user/session/: dyn_session.rs  memory.rs  mod.rs  redb_session.rs
