[package]
name = "nitro_share_cli"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "nitro_share"
[[bin]]
name = "nitro_share_admin"

[dependencies]
tokio = {workspace=true}
sea-orm = { workspace = true, features = ["runtime-tokio-rustls"] }
sqlx = {workspace=true}