[package]
name = "nitro_share_server"
description = "NitroShare Server"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nitro_share"
path = "src/lib.rs"
[[bin]]
name = "nitro_share_server"
path = "src/bin/main.rs"
[[bin]]
name = "output_openapi"

[dependencies]
common = { path = "../crates/common" ,features = ["sea-orm", "actix-web"]}
helper_macros = { path = "../crates/helper_macros"}
tokio = {workspace=true}

actix-web = { workspace=true, features = ["rustls-0_21"] }
actix-service = "2"
actix-files = "0.6"
actix-cors = "0.6"
anyhow = "1"
actix-multipart = { version = "0.6" , features=["actix-multipart-derive"]}
mime = "0.3.17"
rustls = "0.21"
rustls-pemfile = "1"
handlebars = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Database
entities = { path = "../crates/entities" }
migration = { path = "../crates/migration" }
sea-orm = { workspace = true, features = ["runtime-actix-rustls",] }
sqlx = {workspace=true}
uuid = { version = "1" ,features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5.0"
futures-util = "0.3.21"
auto_impl = "1.0.1"

# Utils
sha2 = { version = "0.10" }
either = { version = "1.8" }
base64 = "0.21"
parking_lot = { version = "0.12" }
rand = { version = "0.8.5", features=["std_rng"] }

async-trait = "0.1"
ahash = "0.8"
utoipa = { workspace=true, features = ["actix_extras"] }
utoipa-swagger-ui = { git="https://github.com/wyatt-herkamp/utoipa.git", features = ["actix-web"] }
clap = { workspace=true }
redb = { version = "1"}
simdutf8= {version="0.1.4"}
bytes = "1.4.0"
# Macro Laziness
strum = { version = "0.25" , features = ["derive"] }
thiserror = "1"
this_actix_error = { git = "https://github.com/wyatt-herkamp/this_actix_errors.git" }
config_types = {git="https://github.com/wyatt-herkamp/config_types.git", features = ["strum", "digestible"]}
digestible={workspace=true}
# Log
tracing-actix-web = "0.7"
tracing = "0.1"
typeshare = {workspace=true}
# Tracing subscriber - Composing Tracing subscribers
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry - Tracing framework
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13", default-features = true , features = ["http-proto","reqwest-client"]}

# Tracing OpenTelemetry - Tracing subscriber for OpenTelemetry
tracing-opentelemetry = "0.21"

[build-dependencies]
vergen = { version = "8.0.0" }
[features]



