[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1" ,features = ["derive"] }
sea-orm = { workspace=true }
sqlx ={workspace=true }
common = { path = "../common" ,features = ["sea-orm"]}
helper_macros = { path = "../helper_macros" }
serde_json = "1"
ahash = "0.8"
derive_builder = "0.12.0"
rand = { version = "0.8",features=["std_rng"]}
digestible={workspace=true}
chrono = {workspace=true}
utoipa = { workspace=true, features = [] }
typeshare = {workspace=true}
