[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
entities = { path = "../entities" }
sqlx = {workspace=true}
[dependencies.sea-orm-migration]
version = "^0.12"
features = ["runtime-actix-rustls"]
